# DDS_test

./: .gitignore  README.md  pyproject.toml
dds/dds/: settings.py  urls.py
dds/dds/formats/ru/: formats.py
dds/transactions/: admin.py  apps.py  autocomplete.py  forms.py  models.py  urls.py
dds/transactions/migrations/: 0001_initial.py
